--- a/Example/PandaHook/Base.lproj/Main.storyboard
+++ b/Example/PandaHook/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5Ez-Fn-59n">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5Ez-Fn-59n">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -35,42 +35,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="aZx-cO-bh7">
-                                <rect key="frame" x="0.0" y="44" width="375" height="623"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GEo-ug-TW7">
-                                        <rect key="frame" x="139.5" y="0.0" width="96" height="207.5"/>
-                                        <state key="normal" title="hook对象方法"/>
-                                        <connections>
-                                            <action selector="clickObjBtn:" destination="whP-gf-Uak" eventType="touchUpInside" id="zCj-Ee-YM8"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uJV-vt-kkP">
-                                        <rect key="frame" x="147.5" y="207.5" width="80" height="208"/>
-                                        <state key="normal" title="hook类方法"/>
-                                        <connections>
-                                            <action selector="clickClassBtn:" destination="whP-gf-Uak" eventType="touchUpInside" id="iGR-Fe-Dba"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K0b-tu-z5F">
-                                        <rect key="frame" x="134.5" y="415.5" width="106" height="207.5"/>
-                                        <state key="normal" title="hook block对象"/>
-                                        <connections>
-                                            <action selector="clickBlockBtn:" destination="whP-gf-Uak" eventType="touchUpInside" id="Lnv-RY-jwU"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MHP-hD-bGL">
+                                <rect key="frame" x="16" y="44" width="343" height="623"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="aZx-cO-bh7" firstAttribute="top" secondItem="uEw-UM-LJ8" secondAttribute="bottom" id="N5u-Zt-rzZ"/>
-                            <constraint firstItem="Mvr-aV-6Um" firstAttribute="top" secondItem="aZx-cO-bh7" secondAttribute="bottom" id="kOm-kL-UlH"/>
-                            <constraint firstItem="aZx-cO-bh7" firstAttribute="leading" secondItem="TpU-gO-2f1" secondAttribute="leading" id="la2-DV-r0n"/>
-                            <constraint firstAttribute="trailing" secondItem="aZx-cO-bh7" secondAttribute="trailing" id="wsc-dy-r6S"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MHP-hD-bGL" secondAttribute="trailing" id="2om-jW-FDE"/>
+                            <constraint firstItem="Mvr-aV-6Um" firstAttribute="top" secondItem="MHP-hD-bGL" secondAttribute="bottom" id="eHc-U5-nYc"/>
+                            <constraint firstItem="MHP-hD-bGL" firstAttribute="top" secondItem="uEw-UM-LJ8" secondAttribute="bottom" id="iJu-Vk-S4L"/>
+                            <constraint firstItem="MHP-hD-bGL" firstAttribute="leading" secondItem="TpU-gO-2f1" secondAttribute="leadingMargin" id="s9p-1n-Kl3"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="cRc-M6-4OY"/>
+                    <connections>
+                        <outlet property="tableView" destination="MHP-hD-bGL" id="jyZ-qp-D5K"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tc2-Qw-aMS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
